-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
exp_bl_lock_at accounted the period since BLAST send until cancel RPC came to server originally. LU-6032 started to update l_blast_sent for expired locks which are still busy - prolonged locks when the timeout expired. In fact, this is a good idea to cover not the whole period but until any involved RPC comes - it avoids excessively large lock callback timeouts - and the IO which does the lock prolong is also able to re-start the AT cycle by updating the l_blast_sent.
Unfortunately, the change seems to be made occasionally as the main prolong code was not adjusted accordingly.